--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html, body {
+  @apply h-full
+}
+
+.container {
+  @apply max-w-6xl px-5 mx-auto
+}
